# hierarchy

./: .gitignore  README.md  pyproject.toml
hierarchy/: coca_train.ipynb  inference.ipynb
hierarchy/utils/: dataset_coca.py  dataset_mlp.py  lion_pytorch.py  model_coca.py  model_mlp.py  utils.py
