[tool.poetry]
name = "hierarchy"
version = "0.1.0"
description = ""
authors = ["nikonovone <nikonov.nikita@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.21.3"
pandas = "^1.5.3"
fastparquet = "^2023.2.0"
transformers = "^4.26.1"
torch = "^1.13.1"
pillow = "^9.4.0"
matplotlib = "^3.7.1"
timm = "^0.6.12"
pytorch-lightning = "^1.9.4"
navec = "^0.10.0"
slovnet = "^0.6.0"
albumentations = "^1.3.0"
opencv-python = "^4.7.0.72"
tensorboard = "^2.12.0"
autopep8 = "^2.0.2"
natasha = "^1.5.0"
rich = "^13.3.2"
ipywidgets = "^8.0.4"
spacy = "^3.5.1"
torch-tb-profiler = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
